@@ -1,5 +1,10 @@
 [b]Version 0.6.8[/b]:
 
+(2009-04-06)
+ * Pass to mplayer "-vc ffh264vdpau,ffmpeg12vdpau,ffwmv3vdpau,ffvc1vdpau," if
+   using vdpau as video driver and not other video codec has been set.
+   (Untested)
+
 (2009-04-02)
  * Now the mouse cursor is hidden only when playing.
 
